INTERIM-26 Fix iframe width
Videos were overflowing Panels

--- a/css/suitcase.css
+++ b/css/suitcase.css
@@ -1300,6 +1300,11 @@ ul.tabs.secondary img {
     color: #676767;
 }
 
+.panel-panel iframe {
+    max-width: 100%;
+    padding: 0 1rem;
+}
+
 /* .panel-pane-overflow must be set
 in the panel settings */ 
 
